--- a/data/equipment/weapon-06-tpKD2TZEzAToow1O.htm
+++ b/data/equipment/weapon-06-tpKD2TZEzAToow1O.htm
@@ -18,7 +18,7 @@ Nom: Bâton de maître de cérémonie
 <p> Tout en brandissant un </em> le personnel de Ring Master </EM>, votre voix normale peut être clairement entendue par toutes les créatures à moins de 300 pieds, peu importe les barrières intervenantes ou le bruit ambiant, bien que votre voix ne puisse pas pénétrer le silence magique et que vous pouvez ' t Utilisez-le pour étendre un effet auditif ou sonique à travers des obstacles qui le bloqueraient autrement. </p>
 <p><strong>Activation</strong> Lancer un sort</p>
 <p><strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
-<p> strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste et à tous les niveaux énumérés.</p>
+<p><strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste et à tous les niveaux énumérés.</p>
 <ul>
 <li><strong>Tour de magie</strong> @Compendium[pf2e.spells-srd.kl2q6JvBZwed4B6v]{lumières dansantes}</li>
 <li><strong> 1st </strong> @Compendium[pf2e.spells-srd.TTwOKGqmZeKSyNMH]{feuille morte}, @Compendium[pf2e.spells-srd.LvezN4a3kYf1OHMg]{disque flottant}</li>
