--- a/data/equipment/weapon-16-oT4pyqLKpJVXDb46.htm
+++ b/data/equipment/weapon-16-oT4pyqLKpJVXDb46.htm
@@ -1,6 +1,6 @@
 Name: Staff of Impossible Visions (Major)
-Nom: 
-État: auto-trad
+Nom: Bâton de visions impossibles majeur
+État: libre
 
 ------ Description (en) ------
 <p>This bizarre staff is made from oak, capped with a cluster of eye-shaped gemstones that seem to move and undulate at the corner of your vision. While wielding the staff, you can peer through the eyes, using your normal visual senses (including any benefits of spells affecting your vision, like <em>see invisibility</em>). You can maneuver the staff to see things around corners, at higher elevations, or in places where the staff can fit but your head can't. This doesn't provide sufficient line of effect to target creatures around corners. The eyes are as vulnerable as your eyes and can be affected by anything that alters your vision, such as a blinding flash of light.</p>
@@ -18,17 +18,17 @@ Nom:
 <li><strong>7th</strong> @Compendium[pf2e.spells-srd.jBGAYmR0BkkbpJvG]{Visions of Danger}, @Compendium[pf2e.spells-srd.8kJbiBEjMWG4VUjs]{Warp Mind}</li>
 </ul>
 ------ Description (fr) ------
-<p>Cet étrange bâton est fabriqué en chêne, et est coiffé d'un amas de pierres précieuses en forme d'yeux qui semblent bouger et onduler au coin de votre vision. Lorsque vous maniez le bâton, vous pouvez regarder à travers les yeux, en utilisant vos sens visuels normaux (y compris les avantages des sorts affectant votre vision, comme <em>see invisibility</em>). Vous pouvez manœuvrer le bâton pour voir les choses dans les coins, en hauteur, ou dans des endroits où le bâton peut tenir mais pas votre tête. Cela n’offre pas une ligne d’effet suffisante pour cibler les créatures dans les coins. Les yeux sont aussi vulnérables que vos yeux et peuvent être affectés par tout ce qui altère votre vision, comme un flash lumineux aveuglant.</p>
-<p><strong>Activate</strong> Cast a Spell;</p>
-<p><strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste;</p>
-<p><strong>Craft Requirements</strong> Fournissez une incantation de tous les niveaux listés de tous les sorts listés.</p>
+<p>Ce bâton bizarre est fabriqué à partir de chêne, coiffé d'une grappe de pierres précieuses en forme d'œil qui semblent bouger et onduler quand vous les voyez du coin de l'oeil. Quand vous maniez ce bâton, vous pouvez regarder à travers les yeux, en utilisant vos sens visuels normaux (en appliquant les avantages des sorts qui affectent votre vision, comme <em>détection de l'invisibilité</em>). Vous pouvez manœuvrer le bâton pour voir des choses de l'autre côté d'un coin de mur, dans un endroit plus haut que vous ou dans des endroits où le bâton peut être placé, mais pas votre tête. Cela ne fournit pas une ligne d'effet suffisante pour cibler les créatures situées de l'autre côté d'un coin de mur. Les yeux sont aussi vulnérables que vos yeux et peuvent être affectés par tout ce qui modifie votre vision, comme un éclat de lumière aveuglant.</p>
+<p><strong>Activation</strong> Lancer un sort; </p>
+<p><strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
+<p><strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste et à tous les niveaux énumérés.</p>
 <ul>
-<li><strong>Cantrip</strong> @Compendium[pf2e.spells-srd.4gBIw4IDrSfFHik4]{Daze}</li>
-<li><strong>1st</strong> @Compendium[pf2e.spells-srd.4koZzrnMXhosn0D]{Peur}, @Compendium[pf2e.spells-srd.R8bqnYiThB6MYTxD]{Douleur fantôme}</li>
-<li><strong>2e</strong> @Compendium[pf2e.spells-srd.41TZEjhO6D1nWw2X]{Augmentation}, @Compendium[pf2e.spells-srd.Mkbq9xlAUxHUHyR2]{Paranoïa}</li>
-<li><strong>3e</strong> @Compendium[pf2e.spells-srd.K2WpC3FFoHrqX9Q5]{Modèle Hypnotique}, @Compendium[pf2e.spells-srd.DCQHaLrYXMI37dvW]{Paralyser}</li>
-<li><strong>4ème</strong> @Compendium[pf2e.spells-srd.ykyKclKTCMp2SFXa]{Yeux innombrables}, @Compendium[pf2e.spells-srd.tlcrVRqW1MSKJ5IC]{Tueur fantasmatique}</li>
-<li><strong>5e</strong> @Compendium[pf2e.spells-srd.m4Mc5XbdML92BKOE]{Géométrie étrange}</li>
-<li><strong>6ème</strong> @Compendium[pf2e.spells-srd.NhGXgmI3AjkkwnPk]{Fureur aveuglante}, @Compendium[pf2e.spells-srd.0XP2XOxT9VSiXFDr]{Calamité fantasmatique}</li>
-<li><strong>7ème</strong> @Compendium[pf2e.spells-srd.jBGAYmR0BkkbpJvG]{Visions du danger}, @Compendium[pf2e.spells-srd.8kJbiBEjMWG4VUjs]{Esprit de distorsion}</li>
+<li> <strong>Tour de magie</strong> @compendium [pf2e.spells-srd.4gbiw4idrsffhik4] {Daze} </Li>
+<li> <strong>Niveau 1</strong> @Compendium[pf2e.spells-srd.4koZzrnMXhhosn0D]{terreur}, @Compendium[pf2e.spells-srd.R8bqnYiThB6MYTxD]{douleur fantôme} </Li>
+<li> <strong>Niveau 2</strong> @Compendium[pf2e.spells-srd.41TZEjhO6D1nWw2X]{augure}, @Compendium[pf2e.spells-srd.Mkbq9xlAUxHUHyR2]{paranoïa} </li>
+<li><strong>Niveau 3</strong> @Compendium[pf2e.spells-srd.K2WpC3FFoHrqX9Q5]{lueurs hypnotiques}, @Compendium[pf2e.spells-srd.DCQHaLrYXMI37dvW]{paralisie}</li>
+<li><strong>Niveau 4</strong> @Compendium[pf2e.spells-srd.ykyKclKTCMp2SFXa]{yeux innombrables}, @Compendium[pf2e.spells-srd.tlcrVRqW1MSKJ5IC]{assassin imaginaire}</li>
+<li><strong>Niveau 5</strong> @Compendium[pf2e.spells-srd.m4Mc5XbdML92BKOE]{géométrie étrange}</li>
+<li><strong>Niveau 6</strong> @Compendium[pf2e.spells-srd.NhGXgmI3AjkkwnPk]{furie aveuglante}, @Compendium[pf2e.spells-srd.0XP2XOxT9VSiXFDr]{calamité imaginaire}</li>
+<li><strong>Niveau 7</strong> @Compendium[pf2e.spells-srd.jBGAYmR0BkkbpJvG]{dangereuses visions}, @Compendium[pf2e.spells-srd.8kJbiBEjMWG4VUjs]{déformer l'esprit}</li>
 </ul>
