--- a/data/equipment/weapon-20-pIagOwW8EFBaKW3k.htm
+++ b/data/equipment/weapon-20-pIagOwW8EFBaKW3k.htm
@@ -1,6 +1,6 @@
 Name: Staff of Providence (True)
-Nom: 
-État: auto-trad
+Nom: Bâton de la providence ultime
+État: libre
 
 ------ Description (en) ------
 <p>A large, stylized symbol of an eye adorns the top of this wooden staff, representing the watchful eye of the divine powers. The bearer of the staff can guide and protect, seeing bounties and tragedies that could befall them in the future.</p>
@@ -27,27 +27,27 @@ Nom:
 <li>+1 item bonus to Religion checks to Recall Knowledge</li>
 </ul>
 ------ Description (fr) ------
-<p> Un grand symbole stylisé d'un œil orne le haut de ce personnel en bois, représentant l'œil vigilant des pouvoirs divins. Le porteur du personnel peut guider et protéger, voir des primes et des tragédies pouvant les arriver à l'avenir. </p>
-<p> Lors de la manifestation de ce personnel, vous gagnez un bonus d'élément de +1 sur les chèques de survie pour sens de sens ou subsistez, ainsi que des contrôles de religion pour rappeler les connaissances. </p>
-<p> <strong> activer </strong> lancer un sort </p>
-<p> <strong> effet </strong> Vous dépensez un certain nombre de charges du personnel pour lancer un sort de sa liste. </p>
+<p>Un grand symbole stylisé d'un œil orne le haut de ce bâton en bois, représentant l'œil vigilant des pouvoirs divins. Le porteur du personnel peut guider et protéger, et voir des primes et des tragédies pouvant le toucher dans le futur.</p>
+<p>Quand vous maniez ce bâton, vous gagnez un bonus d'objet de +1 sur les test de Survie pour s'orienter ou subsister, ainsi qu'aux tests de Religion pour se souvenir.</p>
+<p> <strong>Activation</strong> Lancer un sort</p>
+<p> <strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
 <ul>
-<li> <strong> Cantrip </strong> @compendium [pf2e.spells-srd.izcxfqfwf3wocnfs] {guidance}, @compendium [pf2e.spells-srd.wbmvzndfpwka3qt4] {Light} </Li>
-<li> <strong> 1st </strong> @@ Compendium [pf2e.spells-srd.xsujb7esswkl19uu] {bénissez}, @commendium [pf2e.spells-srd.wzlkjsw6hsbhuklc] {Créer de l'eau} </Li>
-<li> <strong> 2e </strong> @compendium [pf2e.spells-srd.41tzejho6d1nww2x] {Augury}, @compendium [pf2e.spells-srd.mt6zzkvx8q4xigfq] {Créer de la nourriture}, @comendium [pf2e.spells-srd .jwk43ykshtkjqvq9] {voir invisibilité}, @compendium [pf2e.spells-srd.htou8cg05yuskesj] {status} </li>
-<li> <strong> 3ème </strong> @compendium [pf2e.spells-srd.ifuezfmmwynwvbhy] {passage sûr}, @compendium [pf2e.spells-srd.ppa1steigplkkkeqR] {Guide de Wanderer} </Li>
-<li> <strong> 4ème </strong> @compendium [pf2e.spells-srd.oyfcwquw8xrazsnr] {Supprimer la malédiction}, @compendium [pf2e.spells-srd.tgihruftgdselpje] {Épelle immunité}, @compendium [pf2e.spells- SRD.HTOU8CG05YUSKESJ] {Statut} </LI>
-<li> <strong> 5ème </strong> @compendium [pf2e.spells-srd.ek5xi0aedzhbgm21] {œil}, @comendium [pf2e.spells-srd.jwk43ykshtkjqvq9] {Voir invisibilité}, @comendium [pf2e.spells- Srd.TGIHRFTGDSELPJE] {Épelle Immunity} </Li>
-<li> <strong> 6th </strong> @compendium [pf2e.spells-srd.tgihruftgdselpje] {Épelle immunité}, @compendium [pf2e.spells-srd.9w2qv0wxlg6tqg3y] {Safeguard Scintillant}, @compendium [pf2e.spells- srd.uqlxmqqesgwevjki] {vrai voir} </li>
-<li> 7th @compendium [pf2e.spells-srd.m2xfmnysqiukqdraj] {Energy Aegis}, @compendium [pf2e.spells-srd.tgihruftgdselpje] {Spell Immunity} </Li>
-<li> 8th @comendium [pf2e.spells-srd.kttglblg9nqmbuyyl] {inspiration divine}, @compendium [pf2e.spells-srd.tgihruftgdselpje] {Épelle immunité} </Li>
-<li> 9th @comendium [pf2e.spells-srd.qsneg9kzpodsacmq] {foresight}, @compendium [pf2e.spells-srd.fkdekktdmbeplyry] {Présence accablante}, @compendium [pf2e.spells-srd.tgihruftgdselpje] {Épelle immunité} </li>
+<li><strong>Cantrip</strong> @Compendium[pf2e.spells-srd.izcxFQFwf3woCnFs]{assistance divine}, @Compendium[pf2e.spells-srd.WBmvzNDfpwka3qT4]{lumiere}</li>
+<li><strong>Niveau 1</strong> @@Compendium[pf2e.spells-srd.XSujb7EsSwKl19Uu]{bénédiction}, @Compendium[pf2e.spells-srd.WzLKjSw6hsBhuklC]{création d'eau}</li>
+<li><strong>Niveau 2</strong> @Compendium[pf2e.spells-srd.41TZEjhO6D1nWw2X]{augure}, @Compendium[pf2e.spells-srd.Mt6ZzkVX8Q4xigFq]{création de nourriture}, @Compendium[pf2e.spells-srd.jwK43yKsHTkJQvQ9]{détection de l'invisibilité}, @Compendium[pf2e.spells-srd.HTou8cG05yuSkesj]{rapport}</li>
+<li><strong>Niveau 3</strong> @Compendium[pf2e.spells-srd.IFuEzfmmWyNwVbhY]{passage sûr}, @Compendium[pf2e.spells-srd.ppA1StEigPLKEQqR]{guide du pélerin}</li>
+<li><strong>Niveau 4</strong> @Compendium[pf2e.spells-srd.OyFCwQuw8XRazsNr]{délivrance des malédictions}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}, @Compendium[pf2e.spells-srd.HTou8cG05yuSkesj]{rapport}</li>
+<li><strong>Niveau 5</strong> @Compendium[pf2e.spells-srd.Ek5XI0aEdZhBgm21]{Œil indiscret}, @Compendium[pf2e.spells-srd.jwK43yKsHTkJQvQ9]{étection de l'invisibilité}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}</li>
+<li><strong>Niveau 6</strong> @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}, @Compendium[pf2e.spells-srd.9W2Qv0wXLg6tQg3y]{précaution scintillante}, @Compendium[pf2e.spells-srd.uqlxMQQeSGWEVjki]{vision lucide}</li>
+<li><strong>Niveau 7</strong> @Compendium[pf2e.spells-srd.m2xFMNyQiUKQDRaj]{égide énergétique}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}</li>
+<li><strong>Niveau 8</strong> @Compendium[pf2e.spells-srd.KtTGLbLG9nqMbUYL]{inspiration divine}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}</li>
+<li><strong>Niveau 9</strong> @Compendium[pf2e.spells-srd.qsNeG9KZpODSACMq]{prémonition}, @Compendium[pf2e.spells-srd.fkDeKktdmbeplYRY]{présence écrasante}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}</li>
 </ul>
-<p> <strong> EXIGENCES D'ARTISANAT </FORT> Fournissez une coulée de tous les niveaux énumérés de tous les sorts répertoriés. </p>
+<p><strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste et à tous les niveaux énumérés.</p>
 <h />
-<p> Effets appliqués automatiquement: </p>
+<p>Effets appliqués automatiquement: </p>
 <ul>
-<LI> +1 Article Bonus à la survie Vérifie la direction de sens ou subsistez, </LI>
-<LI> +1 Article Bonus aux chèques de religion pour rappeler les connaissances </li>
+<li>+1 bonus d'objet aux tests de Survie pour S'Orienter ou Subsister,</li>
+<li>+1 bonus d'objet aux tests de Religion pour Se Souvenir</li>
 </ul>
  
