--- a/data/equipment/weapon-20-ZPnQMNOyHjTkkGx4.htm
+++ b/data/equipment/weapon-20-ZPnQMNOyHjTkkGx4.htm
@@ -1,6 +1,6 @@
 Name: Staff of Providence (Ture)
-Nom: 
-État: auto-trad
+Nom: Bâton de la providence ultime
+État: libre
 
 ------ Description (en) ------
 <p>A large, stylized symbol of an eye adorns the top of this wooden staff, representing the watchful eye of the divine powers. The bearer of the staff can guide and protect, seeing bounties and tragedies that could befall them in the future. When wielding this staff, you gain a +1 item bonus on <em>Survival </em>checks to <em>Sense Direction</em> or <em>Subsist</em>, and to <em>Religion </em>checks to <em>Recall Knowledge</em>.</p>
@@ -20,19 +20,26 @@ Nom:
 <li>9th @Compendium[pf2e.spells-srd.qsNeG9KZpODSACMq]{Foresight}, @Compendium[pf2e.spells-srd.fkDeKktdmbeplYRY]{Overwhelming Presence}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{Spell Immunity}</li>
 </ul>
 ------ Description (fr) ------
-Un grand symbole stylisé d'un œil orne le haut de ce bâton en bois, représentant l'œil vigilant des pouvoirs divins. Le porteur du bâton peut guider et protéger, voyant les bontés et les tragédies qui pourraient lui arriver dans le futur. Lorsque vous maniez ce bâton, vous bénéficiez d'un bonus d'objet de +1 aux tests de <em>Survie </em>aux tests de <em>Sens de la direction</em> ou de <em>Subsistance</em> et aux tests de <em>Religion </em>aux tests de <em>Rappel des connaissances</em>.</p>
-<p><strong>Activate</strong> Cast a Spell;</p>
-<p><strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste;</p>
-<p><strong>Craft Requirements</strong> Fournissez une incantation de tous les niveaux listés de tous les sorts listés.</p>
+<p>Un grand symbole stylisé d'un œil orne le haut de ce bâton en bois, représentant l'œil vigilant des pouvoirs divins. Le porteur du personnel peut guider et protéger, et voir des primes et des tragédies pouvant le toucher dans le futur.</p>
+<p>Quand vous maniez ce bâton, vous gagnez un bonus d'objet de +1 sur les test de Survie pour s'orienter ou subsister, ainsi qu'aux tests de Religion pour se souvenir.</p>
+<p> <strong>Activation</strong> Lancer un sort</p>
+<p> <strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
 <ul>
-<li><strong>Cantrip</strong> @Compendium[pf2e.spells-srd.izcxFQFwf3woCnFs]{Guidance}, @Compendium[pf2e.spells-srd.WBmvzNDfpwka3qT4]{Light}</li>
-<li><strong>1er</strong> @@Compendium[pf2e.spells-srd.XSujb7EsSwKl19Uu]{Blessure}, @Compendium[pf2e.spells-srd.WzLKjSw6hsBhuklC]{Créer Eau}</li>
-<li><strong>2e</strong> @Compendium [pf2e.spells-srd.41 TZEjhO6D1nWw2X]{Augmentation}, @Compendium[pf2e.spells-srd.Mt6ZzkVX8Q4xigFq]{Créer de la nourriture}, @Compendium[pf2e. sorts-srd.jwK43yKsHTkJQvQ9]{Voir Invisibilité}, @Compendium[pf2e.sorts-srd.HTou8cG05yuSkesj]{Statut}</li>
-<li><strong>3ème</strong> @Compendium[pf2e.spells-srd.IFuEzfmmWyNwVbhY]{Passage sécurisé}, @Compendium[pf2e.spells-srd.ppA1StEigPLKEQqR]{Guide du vagabond}</li>
-<li><strong>4e</strong> @Compendium[pf2e.spells-srd.OyFCwQuw8XRazsNr]{Remove Curse}, @Compendium[pf2e. spells-srd.tgIhRUFtgDSELpJE]{Immunité aux sorts}, @Compendium[pf2e.spells-srd.HTou8cG05yuSkesj]{Etat}</li>
-<li><strong>5e</strong> @Compendium[pf2e.spells-srd.Ek5XI0aEdZhBgm21]{Oeil indiscret}, @Compendium[pf2e. sorts-srd.jwK43yKsHTkJQvQ9]{Invisibilité}, @Compendium[pf2e.sorts-srd.tgIhRUFtgDSELpJE]{Immunité aux sorts}</li>
-<li><strong>6th</strong> @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{Immunité contre les sorts}, @Compendium[pf2e.spells-srd.9 W2Qv0wXLg6tQg3y]{Garde Scintillante}, @Compendium[pf2e.spells-srd.uqlxMQQeSGWEVjki]{Vision Vraie}</li>
-<li>7ème @Compendium[pf2e.spells-srd.m2xFMNyQiUKQDRaj]{Égide d'énergie}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{Immunité aux sorts}</li>
-<li>8ème @Compendium[pf2e.spells-srd.KtTGLbLG9nqMbUYL]{Inspiration Divine}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{Immunité aux sorts}</li>
-<li>9ème @Compendium[pf2e.spells-srd.qsNeG9KZpODSACMq]{Vision lointaine}, @Compendium[pf2e.spells-srd.fkDeKktdmbeplYRY]{Présence écrasante}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{Immunité aux sorts}</li>
+<li><strong>Cantrip</strong> @Compendium[pf2e.spells-srd.izcxFQFwf3woCnFs]{assistance divine}, @Compendium[pf2e.spells-srd.WBmvzNDfpwka3qT4]{lumiere}</li>
+<li><strong>Niveau 1</strong> @@Compendium[pf2e.spells-srd.XSujb7EsSwKl19Uu]{bénédiction}, @Compendium[pf2e.spells-srd.WzLKjSw6hsBhuklC]{création d'eau}</li>
+<li><strong>Niveau 2</strong> @Compendium[pf2e.spells-srd.41TZEjhO6D1nWw2X]{augure}, @Compendium[pf2e.spells-srd.Mt6ZzkVX8Q4xigFq]{création de nourriture}, @Compendium[pf2e.spells-srd.jwK43yKsHTkJQvQ9]{détection de l'invisibilité}, @Compendium[pf2e.spells-srd.HTou8cG05yuSkesj]{rapport}</li>
+<li><strong>Niveau 3</strong> @Compendium[pf2e.spells-srd.IFuEzfmmWyNwVbhY]{passage sûr}, @Compendium[pf2e.spells-srd.ppA1StEigPLKEQqR]{guide du pélerin}</li>
+<li><strong>Niveau 4</strong> @Compendium[pf2e.spells-srd.OyFCwQuw8XRazsNr]{délivrance des malédictions}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}, @Compendium[pf2e.spells-srd.HTou8cG05yuSkesj]{rapport}</li>
+<li><strong>Niveau 5</strong> @Compendium[pf2e.spells-srd.Ek5XI0aEdZhBgm21]{Œil indiscret}, @Compendium[pf2e.spells-srd.jwK43yKsHTkJQvQ9]{étection de l'invisibilité}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}</li>
+<li><strong>Niveau 6</strong> @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}, @Compendium[pf2e.spells-srd.9W2Qv0wXLg6tQg3y]{précaution scintillante}, @Compendium[pf2e.spells-srd.uqlxMQQeSGWEVjki]{vision lucide}</li>
+<li><strong>Niveau 7</strong> @Compendium[pf2e.spells-srd.m2xFMNyQiUKQDRaj]{égide énergétique}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}</li>
+<li><strong>Niveau 8</strong> @Compendium[pf2e.spells-srd.KtTGLbLG9nqMbUYL]{inspiration divine}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}</li>
+<li><strong>Niveau 9</strong> @Compendium[pf2e.spells-srd.qsNeG9KZpODSACMq]{prémonition}, @Compendium[pf2e.spells-srd.fkDeKktdmbeplYRY]{présence écrasante}, @Compendium[pf2e.spells-srd.tgIhRUFtgDSELpJE]{immunité contre les sorts}</li>
+</ul>
+<p><strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste et à tous les niveaux énumérés.</p>
+<h />
+<p>Effets appliqués automatiquement: </p>
+<ul>
+<li>+1 bonus d'objet aux tests de Survie pour S'Orienter ou Subsister,</li>
+<li>+1 bonus d'objet aux tests de Religion pour Se Souvenir</li>
 </ul>
