--- a/data/feats/skill-02-gjWpnUYOWvTuphET.htm
+++ b/data/feats/skill-02-gjWpnUYOWvTuphET.htm
@@ -1,8 +1,8 @@
 Name: Wilderness Spotter (Forest)
-Nom: 
+Nom: Observateur des étendues sauvages (Forêt)
 PrereqEN: expert in Survival
-PrereqFR: 
-État: aucune
+PrereqFR: expert en Survie
+État: libre
 
 ------ Description (en) ------
 <p>You can use Survival in place of Perception to roll initiative when in forested terrain in a natural location (not a structure) even if you weren't tracking or otherwise using Survival before the encounter.</p>
@@ -10,3 +10,7 @@ PrereqFR:
 <hr />
 <p><strong>Special</strong> You can select this feat more than once. Each time you select it, the feat applies to a new type of terrain.</p>
 ------ Description (fr) ------
+<p>Vous pouvez utiliser Survie à la place de Perception pour déterminer l'initiative lorsque vous êtes dans les forêts dans un lieu naturel (pas une structure) même si vous n'étiez pas en train de Pister ou d'utiliser autrement Survie avant la rencontre.</p>
+<p>Vous pouvez aussi utiliser la survie au lieu de la Perception pour remarquer des pièges dans les endroits naturels dans un environnement forestier ; si vous trouvez un piège artisanal de cette manière, vous pouvez aussi utiliser Survie au lieu de Vol pour Désamorcer le mécanisme.</p>
+<hr />
+<p><strong>Spécial</strong> Vous pouvez choisir ce don plus d'une fois. Chaque fois que vous le choisissez, le don s'applique à un nouveau type de terrain.</p>
