--- a/data/feats/general-01-XKDFgBEtFdEzCz8X.htm
+++ b/data/feats/general-01-XKDFgBEtFdEzCz8X.htm
@@ -2,7 +2,7 @@ Name: Intuitive Crafting
 Nom: Artisanat intuitif
 PrereqEN: 
 PrereqFR: 
-État: libree
+État: libre
 
 ------ Description (en) ------
 <p>Your affinity with process and order makes you a natural artisan. You gain the trained proficiency rank in Crafting (or another skill of your choice, if you’re already trained in Crafting). You gain the Specialty Crafting skill feat in a specialty of your choice.</p>
