--- a/data/equipment/weapon-00-BeSK3hhVEKL9Wqzj.htm
+++ b/data/equipment/weapon-00-BeSK3hhVEKL9Wqzj.htm
@@ -5,4 +5,4 @@ Nom: Adze de poing
 ------ Description (en) ------
 <p>This is a smaller version of an adze, useful for more delicate woodworking or projects in cramped spaces. Gripplis use the hand adze for crafting and as close quarters weapons.</p>
 ------ Description (fr) ------
-<p>C'est une version plus petite d'un adze, utile pour le travail du bois précis ou les projets dans des espaces restreints. Les gripplis utilisent l'adze de point pour l'artisanat et comme arme de combat rapproché.</p>
+<p>C'est une version plus petite d'un Adze, utile pour le travail du bois précis ou les projets dans des espaces restreints. Les Gripplis utilisent l'Adze de poing pour l'artisanat et comme arme de combat rapproché.</p>
