--- a/data/equipment/weapon-00-nheGxnmwSfYRLC4k.htm
+++ b/data/equipment/weapon-00-nheGxnmwSfYRLC4k.htm
@@ -5,4 +5,4 @@ Nom: Pioche trompeuse
 ------ Description (en) ------
 <p>This ingenious kobold pick conceals several hidden traps, which the wielder can activate to trick and befuddle foes with a variety of damaging blades and bludgeoning surfaces.</p>
 ------ Description (fr) ------
-<p>Cette ingénieuse pioche kobold cache plusieurs pièges, que l'utilisateur peut activer pour tromper et embrouiller ses adversaires avec une variété de lames pernicieuses et de surfaces contondantes.</p>
+<p>Cette ingénieuse pioche Kobold cache plusieurs pièges, que l'utilisateur peut activer pour tromper et embrouiller ses adversaires avec une variété de lames pernicieuses et de surfaces contondantes.</p>
