--- a/data/feats/ancestry-01-BoqMvGy1jXpsaBbo.htm
+++ b/data/feats/ancestry-01-BoqMvGy1jXpsaBbo.htm
@@ -11,4 +11,4 @@ PrereqFR:
 ------ Description (fr) ------
 <p><strong>Accès</strong> ethnie ulfe</p>
 <hr />
-<p>Vous vous êtes entraîné au maniement des boucliers et des armes dès que vous avez été capable de les tenir, soucieux de gagner honneur et gloire. Vous obtenez la réaction @Compendium[pf2e.feats-srd.jM72TjJ965jocBV8]{Blocage au bouclier} et êtes qualifié, à votre choix, avec la hache de bataille ou l'épée longue.</p>
+<p>Vous vous êtes entraîné au maniement des boucliers et des armes dès que vous avez été capable de les tenir, soucieux de gagner honneur et gloire. Vous obtenez la réaction @compendium[pf2e.feats-srd.jM72TjJ965jocBV8]{Blocage au bouclier} et êtes qualifié, au choix, avec la hache de bataille ou l'épée longue.</p>
