--- a/data/classfeatures/druid-01-nfBn8QB6HVdzpTFV.htm
+++ b/data/classfeatures/druid-01-nfBn8QB6HVdzpTFV.htm
@@ -1,7 +1,6 @@
 Name: Anathema (Druid)
 Nom: Anathème (Druide)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>As stewards of the natural order, druids find affronts to nature anathema. If you perform enough acts that are anathema to nature, you lose your magical abilities that come from the druid class, including your primal spellcasting and the benefits of your order. These abilities can be regained only if you demonstrate your repentance by conducting an @Compendium[pf2e.spells-srd.7Fd4lxozd11MQ55N]{Atone} ritual.<br /></p>
@@ -14,12 +13,12 @@ Nom: Anathème (Druide)
 <p>Each druidic order also has additional anathema acts, detailed in the order's entry.</p>
 <p>See specific orders for more information.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">En tant que gardiens de l’ordre naturel, les druides trouvent que les affronts faits à la nature sont des anathèmes. Toutefois, si vous accomplissez trop d’actes anathèmes à la nature, vous perdez les capacités magiques que vous confère la classe de druide, notamment votre capacité d’incantation primordiale et les avantages que vous procure votre ordre. Vous ne pouvez récupérer ces capacités que si vous montrez un réel désir de repentance en accomplissant un rituel de pénitence (décrit page 414).<br></span></p>
-<p><span id="ctl00_MainContent_DetailedOutput">Les agissements suivants sont considérés comme anathèmes par tous les druides: </span></p>
+<p>En tant que gardiens de l’ordre naturel, les druides trouvent que les affronts faits à la nature sont des anathèmes. Toutefois, si vous accomplissez trop d’actes anathèmes à la nature, vous perdez les capacités magiques que vous confère la classe de druide, notamment votre capacité d’incantation primordiale et les avantages que vous procure votre ordre. Vous ne pouvez récupérer ces capacités que si vous montrez un réel désir de repentance en accomplissant un rituel de pénitence (décrit page 414).<br></span></p>
+<p>Les agissements suivants sont considérés comme anathèmes par tous les druides :</p>
 <ul>
 <li>L’utilisation d’armures ou de boucliers métalliques.</li>
 <li>La détérioration de sites naturels.</li>
 <li>L’enseignement de la langue druidique à des non-druides.</li>
 </ul>
-<p>&nbsp; Les ordres druidiques comprennent également d’autres actes anathèmes décrits dans la section de chacun..</p>
+<p>Chaque ordre druidique comprend également d’autres actes anathèmes propres à chacun.</p>
 <p>Voir les différents ordres druidiques pour plus d'informations</p>
