--- a/data/bestiary-ability-glossary-srd/AWvNPE4U0kEJSL1T.htm
+++ b/data/bestiary-ability-glossary-srd/AWvNPE4U0kEJSL1T.htm
@@ -1,7 +1,6 @@
 Name: Sneak Attack
 Nom: Attaque sournoise
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>When the monster Strikes a creature that has the @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Flat-Footed} condition with an agile or finesse melee weapon, an agile or finesse unarmed attack, or a ranged weapon attack, it also deals the listed precision damage. For a ranged attack with a thrown weapon, that weapon must also be an agile or finesse weapon.</p>
