--- a/data/bestiary-ability-glossary-srd/I0HYG0ctCLP5JRsW.htm
+++ b/data/bestiary-ability-glossary-srd/I0HYG0ctCLP5JRsW.htm
@@ -1,9 +1,8 @@
 Name: Light Blindness
 Nom: Aveuglé par la lumière
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>When first exposed to bright light, the monster is @Compendium[pf2e.conditionitems.XgEqL1kFApUbl5Z2]{Blinded} until the end of its next turn. After this exposure, light doesn't blind the monster again until after it spends 1 hour in darkness. However, as long as the monster is in an area of bright light, it's @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Dazzled}.</p>
 ------ Description (fr) ------
-<p> Quand il se trouve exposé à une lumière vive, le monstre est @Compendium[pf2e.conditionspf2e.XgEqL1kFApUbl5Z2]{aveuglé} jusqu’à la fin de son prochain tour. Après cette exposition initiale, la lumière n’aveugle plus le monstre tant qu’il n’a pas passé 1 h dans les ténèbres. Néanmoins, le monstre se trouve dans l’état @Compendium[pf2e.conditionspf2e.TkIyaNPgTZFBCCuh]{ébloui} tant qu’il reste dans une zone de lumière vive.</p>
+<p> Quand il se trouve exposé à une lumière vive, le monstre est @Compendium[pf2e.conditionitems.XgEqL1kFApUbl5Z2]{Aveuglé} jusqu’à la fin de son prochain tour. Après cette exposition initiale, la lumière n’aveugle plus le monstre tant qu’il n’a pas passé 1 h dans les ténèbres. Néanmoins, le monstre se trouve dans l’état @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Ébloui} tant qu’il reste dans une zone de lumière vive.</p>
