--- a/data/bestiary-ability-glossary-srd/JcaIJLGGmst79f1Y.htm
+++ b/data/bestiary-ability-glossary-srd/JcaIJLGGmst79f1Y.htm
@@ -1,8 +1,8 @@
 Name: Thoughtsense
-Nom: 
-État: auto-trad
+Nom: Perception des pensées
+État: libre
 
 ------ Description (en) ------
 <p>Thoughtsense allows a monster to sense all non-mindless creatures at the listed range.</p>
 ------ Description (fr) ------
-La détection des pensées permet à un monstre de sentir toutes les créatures non sans esprit à la distance indiquée ;
+<p>La Perception des pensées permet à un monstre de sentir toutes les créatures qui ne sont pas dénuées d'intelligence dans la portée indiquée.</p>
