--- a/data/bestiary-ability-glossary-srd/fJSNOw4zHGbIm4bZ.htm
+++ b/data/bestiary-ability-glossary-srd/fJSNOw4zHGbIm4bZ.htm
@@ -5,4 +5,4 @@ Nom: Guérison accélérée
 ------ Description (en) ------
 <p>A monster with this ability regains the given number of Hit Points each round at the beginning of its turn.</p>
 ------ Description (fr) ------
-<p>Un monstre qui possède ce pouvoir regagne une quantité donnée de points de vie à chaque round, au début de son tour</p>
+<p>Un monstre qui possède ce pouvoir regagne une quantité donnée de points de vie à chaque round, au début de son tour.</p>
